apps/grafana-image-renderer/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-image-renderer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana-image-renderer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana-image-renderer
    spec:
      containers:
        - name: renderer
          image: docker.io/grafana/grafana-image-renderer:v5.12.4
          ports:
            - name: http
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 4Gi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 10001
            runAsNonRoot: true
            runAsUser: 10001
      volumes:
        - name: tmp
          emptyDir: {}
