apps/grafana-image-renderer/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-image-renderer
spec:
  ports:
    - name: http
      appProtocol: http
      port: 8081
      targetPort: http
  selector:
    app.kubernetes.io/name: grafana-image-renderer
