apps/grafana-image-renderer/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-image-renderer
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana-image-renderer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-system
      ports:
        - port: http
          protocol: TCP
